[package]
name = "wasm-webgl-ecs"
version = "0.1.0"
authors = ["Robert Long <robert@robertlong.me>"]

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.specs]
git = "https://github.com/robertlong/specs.git"
branch = "wasm32"
default-features = false